--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,5 +19,6 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:25.+'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
