--- a/test/EHTest/app/src/main/AndroidManifest.xml
+++ b/test/EHTest/app/src/main/AndroidManifest.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cyberking.developer.eh.test" >
+  package="com.cyberking.developer.eh.test" >
 
-    <application
-        android:allowBackup="true"
-        android:icon="@android:R/drawable/sym_def_app_icon"
-        android:label="EHTest"
-        android:theme="@android:R/style/Theme.Material.Light"
-		android:resizeableActivity="true">
-        <activity
-            android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+  <application
+    android:allowBackup="true"
+    android:icon="@android:R/drawable/sym_def_app_icon"
+    android:label="EHTest"
+    android:theme="@android:R/style/Theme.Material.Light"
+    android:resizeableActivity="true">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+    <activity android:name=".MainActivity">
+
+      <intent-filter>
+
+        <action android:name="android.intent.action.MAIN"/>
+
+        <category android:name="android.intent.category.LAUNCHER"/>
+
+      </intent-filter>
+
+    </activity>
+
+  </application>
 
 </manifest>
